[package]
name = "advent-2025"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
clap = { version = "4.5.51", features = ["derive"] }
dotenvy = "0.15.7"
log = "0.4.28"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
simple_logger = "5.1.0"
